# diceware

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml
src/: cli.rs  lib.rs  main.rs
