[package]
name = "diceware"
description = "Rust crate and CLI for generating strong Diceware passphrases."
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
rand = "0.8.5"
colored = "2.1.0"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
